tests/baselines/reference/ambiguousGenericAssertion1.errors.txt
==== tests/cases/compiler/ambiguousGenericAssertion1.ts (5 errors) ====
    function f<T>(x: T): T { return null; }
    var r = <T>(x: T) => x;
    var r2 = < <T>(x: T) => T>f; // valid
    var r3 = <<T>(x: T) => T>f; // ambiguous, appears to the parser as a << operation
             ~~
!!! error TS1003: Identifier expected.
                   ~
!!! error TS1005: ')' expected.
                      ~
!!! error TS1005: ',' expected.
                        ~~
!!! error TS1005: ';' expected.
                  ~
!!! error TS2095: Could not find symbol 'x'.
    